radios off center fix

--- a/src/app/app.component.controls.scss
+++ b/src/app/app.component.controls.scss
@@ -42,7 +42,10 @@
     border-radius: 4px;
     color: #fff;
     margin: 0;
+	line-height: none;
   }
+  
+
 
   input[type=radio] {
     border-radius: 99px;
